# CPP-CMake-QtWidgets

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  mainwindow.cpp  mainwindow.h
